@@ -12,6 +12,7 @@
 * BUG: Correctly parse table cells that contain links of the form
   [[Topic|Text]].
 * BUG: Fix issue with shared library files not being loaded.
+* BUG: Modify search engine initialization to avoid setup errors.
 * FEATURE: Clean up the layout of the Special:Admin page.
 * FEATURE: Sort property values alphabetically.
 * FEATURE: Add validation checks to Special:Admin.
